# planner-UC

./: .gitignore  AGENT.md  AGENTS.md  README.md  Spec.md  extract_docs.py  extracted_content.txt
.github/workflows/: build.yml  ci.yml
Backend/: README.md  README_CP_SAT.md  main.py  pyproject.toml
Backend/app/: main.py  scheduling_demo.py  scheduling_demo_data.py
Backend/tests/: README.md  conftest.py  test_api.py  test_scheduling_algorithm.py
docs/: ARC42.md  green-software-report.md  owasp.md  reporte_linea_base.md  reporte_optimizado.md  requisitos_adicionales_stakeholders.md  rubrica-cumplimiento.md  sonarqube.md  sus.md
docs/backend/: README.md  SCHEDULING_DEMO_ORTOOLS_EXPLAINED.md  TESTING.md
docs/cierre/: acta-de-constitucion-del-proyecto.md  declaracion-de-trabajo.md  documentacion-de-capacitacion.md  registro-de-defectos.md  registro-de-impedimentos.md  registro-de-incidentes-o-problemas.md  registro-de-riesgos.md  registro-de-supuestos.md
docs/evidencias/: README.md
docs/inicio/: Declaración de la visión del proyecto.docx  Declaración de la visión del proyecto.md  Declaración del equipo del proyecto.docx  Declaración del equipo del proyecto.md  Documento de selección del enfoque del proyecto.docx  Documento de selección del enfoque del proyecto.md  Documento inicial del problema (primer borrador).docx  Documento inicial del problema (primer borrador).md  Product Backlog.md  (+9 more)
frontend/: README.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  proxy.ts
scripts/: carbon_reporter.js  converter.py
(+95 files in other folders)
